--- a/test/RiGrammar-tests.html
+++ b/test/RiGrammar-tests.html
@@ -5,6 +5,7 @@
 
 <script type="text/javascript" src="../src/rita.js"></script>
 <script type="text/javascript" src="../lib/qunit.js"></script>
+<script type="text/javascript" src="../lib/yaml.min.js"></script>
 
 <script type="text/javascript" src="./RiGrammar-tests.js"></script>
 
