updates to tests for YAML grammar loading

--- a/test/UrlLoading-tests.html
+++ b/test/UrlLoading-tests.html
@@ -5,6 +5,8 @@
 
 <script type="text/javascript" src="../src/rita.js"></script>
 <script type="text/javascript" src="../lib/qunit.js"></script>
+<script type="text/javascript" src="../lib/yaml.min.js"></script>
+
 <script type="text/javascript" src="./UrlLoading-tests.js"></script>
 
 <script>
