--- a/test/index.html
+++ b/test/index.html
@@ -66,7 +66,7 @@ function Test(url, failP) {//}, failC) {
 	<a id="AllTests" class=head href="AllTests.html">[Full Test Suite]</a><p>
 
     <a id="RiTa-tests" class=head href="RiTa-tests.html">[RiTa]</a><br>
-	<a id="RiText-tests"  class=head href="RiText-tests.html?noglobals=true">[RiText]</a><br>
+	<!--a id="RiText-tests"  class=head href="RiText-tests.html?noglobals=true">[RiText]</a><br-->
 	<a id="RiString-tests" class=head href="RiString-tests.html?noglobals=true">[RiString]</a><br>
 	<a id="RiGrammar-tests" class=head href="RiGrammar-tests.html">[RiGrammar]</a><br>
 	<a id="RiTaEvent-tests" class=head href="RiTaEvent-tests.html?noglobals=true">[RiTaEvent]</a><br>
@@ -76,9 +76,12 @@ function Test(url, failP) {//}, failC) {
 	
 	<a id="UrlLoading-tests" class=head href="UrlLoading-tests.html">[RiTa-UrlLoading]</a><span class="headnb">(must be run from webserver, e.g. http://localhost/path/to/RiTaJS/test/UrlLoading-tests.html)</span><br>
 	<a id="LibStructure-tests" class=head href="LibStructure-tests.html?noglobals=true">[RiTa-Structure]</a><br>
-	<a id="RiTextStructure-p5" class=head href="RiTextStructure-P5.html">[RiText-Structure(p5)]</a><br>
+	<!--a id="RiTextStructure-p5" class=head href="RiTextStructure-P5.html">[RiText-Structure(p5)]</a><br-->
 	<a id="KnownIssues-tests" class=head href="KnownIssues-tests.html?noglobals=true">[KnownIssueTests]</a><br>
-	<h2 id="qunit-header2">Renderer Tests</h2>
+	
+    <h2 id="qunit-header2">&nbsp;</h2>
+
+	<!--h2 id="qunit-header2">Renderer Tests</h2>
 	
 	<script type="text/javascript">
 	    
@@ -93,7 +96,7 @@ function Test(url, failP) {//}, failC) {
 	    }
 	    document.writeln(body+'</table>');
 	    
-	 </script>
+	 </script-->
 	<p><br/>
 	<img src="imgs/RiTa.jpg" width=100><p>
 
